# SapoSaver

./: Inicio.py  README.md  pyproject.toml  requirements.txt
pages/: 1_Criar_Planilha.py  2_Analises_dos_Gastos.py
