[tool.poetry]
name = "saposaver"
version = "0.1.0"
description = "Web app que facilita o controle de gastos e orçamento pessoal/familiar."
authors = ["pauloSan (krnCode) <mail@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
streamlit = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
