[project]
name = "saposaver"
version = "0.1.0"
description = "Web app que facilita o controle de gastos e orçamento pessoal/familiar."
authors = [{ name = "pauloSan (krnCode)", email = "mail@mail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "pandas>=2.2.2,<3",
    "streamlit>=1.33.0,<2",
    "openpyxl>=3.1.2,<4",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
